@startuml
class Resultado {
- int golesLocal
- int GolesVisitante
- ArrayList<Integer> puntos1
- ArrayList<Integer> puntos2
- ArrayList<Integer> puntos3
- ArrayList<Integer> puntos4
- ArrayList<Integer> puntos5
- ArrayList<Integer> puntos6
- ArrayList<Integer> puntos7
- ArrayList<Integer> puntos8
+ int indi
+ int indice
+ int min
+ int puntosPB
+ int puntosSe
+ int puntosEc
+ int puntosQT
+ int puntosIN
+ int puntosEU
+ int puntosIr
+ int puntosGa
+ int puntosARGENTINAGANADORA
+ int puntosPo
+ int puntosMx
+ int puntosAS
+ int puntosFr
+ int puntosAu
+ int puntosTu
+ int puntosDi
+ int puntosJa
+ int puntosEs
+ int puntosAl
+ int puntosCR
+ int puntosMa
+ int puntosCr
+ int puntosBe
+ int puntosCa
+ int puntosBr
+ int puntosSu
+ int puntosCam
+ int puntosSer
+ int puntosPor
+ int puntosRc
+ int puntosUr
+ int puntosGh
+ boolean decision
~ <<Create>> Resultado()
+ int getGolesLocal()
+ void setGolesLocal(int)
+ int getGolesVisitante()
+ void setGolesVisitante(int)
+ void sumarPuntos(String)
+ boolean ganoLocal(String,String)
+ boolean empate(String,String)
+ void agregarEquipos(Grupo)
+ ArrayList<Integer> getPuntos1()
+ void setPuntos1(ArrayList<Integer>)
+ void addPuntos1(Integer)
+ ArrayList<Integer> getPuntos2()
+ void setPuntos2(ArrayList<Integer>)
+ void addPuntos2(Integer)
+ ArrayList<Integer> getPuntos3()
+ void setPuntos3(ArrayList<Integer>)
+ void addPuntos3(Integer)
+ ArrayList<Integer> getPuntos4()
+ void setPuntos4(ArrayList<Integer>)
+ void addPuntos4(Integer)
+ ArrayList<Integer> getPuntos5()
+ void setPuntos5(ArrayList<Integer>)
+ void addPuntos5(Integer)
+ ArrayList<Integer> getPuntos6()
+ void setPuntos6(ArrayList<Integer>)
+ void addPuntos6(Integer)
+ ArrayList<Integer> getPuntos7()
+ void setPuntos7(ArrayList<Integer>)
+ void addPuntos7(Integer)
+ ArrayList<Integer> getPuntos8()
+ void setPuntos8(ArrayList<Integer>)
+ void addPuntos8(Integer)
}
abstract class EtapaMundial {
- String descripcionEtapa
- ArrayList<Partido> partidos
- ArrayList<Equipo> equiposQueAvanzan
~ <<Create>> EtapaMundial()
+ String getDescripcionEtapa()
+ void setDescripcionEtapa(String)
+ ArrayList<Partido> getPartidos()
+ void setPartidos(ArrayList<Partido>)
+ void addPartido(Partido)
+ ArrayList<Equipo> getEquiposQueAvanzan()
+ void setEquiposQueAvanzan(ArrayList<Equipo>)
}
class Llave {
- ArrayList<Equipo> equiposQueAvanzan
~ <<Create>> Llave()
+ void setEquiposQueAvanzan(ArrayList<Equipo>)
+ ArrayList<Equipo> getEquiposQueAvanzan()
+ void addEquiposQueAvanzan(Equipo)
}
class Partido {
- Date fecha
- Equipo local
- Equipo visitante
- Resultado resultado
~ <<Create>> Partido(Date,Equipo,Equipo)
+ Date getFecha()
+ void setFecha(Date)
+ Equipo getLocal()
+ void setLocal(Equipo)
+ Equipo getVisitante()
+ void setVisitante(Equipo)
+ Resultado getResultado()
+ void setResultado(Resultado)
+ String Agregar(Grupo)
}
class Equipo {
- String nombre
- ArrayList<Partido> partidosJugados
~ <<Create>> Equipo(String)
+ String getNombre()
+ void setNombre(String)
+ ArrayList<Partido> getPartidosJugados()
+ void setPartidosJugados(ArrayList<Partido>)
}
class Grupo {
- ArrayList<Equipo> grupo1
- ArrayList<Equipo> grupo2
- ArrayList<Equipo> grupo3
- ArrayList<Equipo> grupo4
- ArrayList<Equipo> grupo5
- ArrayList<Equipo> grupo6
- ArrayList<Equipo> grupo7
- ArrayList<Equipo> grupo8
- ArrayList<Equipo> equiposQueAvanzan
~ <<Create>> Grupo()
+ ArrayList<Equipo> getEquiposQueAvanzan()
+ ArrayList<Equipo> getGrupo1()
+ void setGrupo1(ArrayList<Equipo>)
+ ArrayList<Equipo> getGrupo2()
+ void setGrupo2(ArrayList<Equipo>)
+ ArrayList<Equipo> getGrupo3()
+ void setGrupo3(ArrayList<Equipo>)
+ ArrayList<Equipo> getGrupo4()
+ void setGrupo4(ArrayList<Equipo>)
+ ArrayList<Equipo> getGrupo5()
+ void setGrupo5(ArrayList<Equipo>)
+ ArrayList<Equipo> getGrupo6()
+ void setGrupo6(ArrayList<Equipo>)
+ ArrayList<Equipo> getGrupo7()
+ void setGrupo7(ArrayList<Equipo>)
+ ArrayList<Equipo> getGrupo8()
+ void setGrupo8(ArrayList<Equipo>)
+ void addGrupo1(Equipo)
+ void addGrupo2(Equipo)
+ void addGrupo3(Equipo)
+ void addGrupo4(Equipo)
+ void addGrupo5(Equipo)
+ void addGrupo6(Equipo)
+ void addGrupo7(Equipo)
+ void addGrupo8(Equipo)
+ void setEquiposQueAvanzan(ArrayList<Equipo>)
+ void addEquiposQueAvanzan(Equipo)
}
class Main {
+ {static} void main(String[])
}


EtapaMundial <|-- Llave
EtapaMundial <|-- Grupo
EtapaMundial *-- Partido
Partido .. Resultado
Equipo .. Partido
@enduml